# projectV2

./: README.md  pyproject.toml
conf/: features_auto.yaml  features_registry.dev_baseline.yaml  features_registry.yaml  path_filters_auto.yaml  portfolio_auto.yaml  retail.yaml
docs/: 1) high level (1).docx  10) LLM Governance & Roles.docx  11) new intertal controls.docx  2) context conditional.docx  3. Feature Threshold Trainer — research.features_bayes.docx  4. Grammar Trainer (GA) — training.ga_grammar (1).docx  5. Rails Trainer And Extended Metrics — training.bayes_trainer.docx  6. research.rfe — Rule . Recipe Enumerator.docx  7. research.join_pcra — Microstructure Training Sets.docx  8. Gatekeeper & Context Selection — execution.gatekeeper.docx  9) Cross-Section Portfolio Layer.docx  Core v1 Engine implementation (4).docx  DETERMINISTIC_PIPELINE_CONTRACT.md  Engine_Pipeline_Steps_Core_v1.docx  FEATURE_FAMILY_DEPENDENCY_GRAPH.md  Realign Master System Spec (Engine + Research Machine)  STRATEGY_PIPELINE_PHASE_A_B.md  TRADE_PATHS_CONTRACT.md  all features.families.docx  microbatch_outputs_2019-01-02.txt  pipeline_updated (1) (2).docx
scripts/: audit_io_contract.py  audit_write_owners.py  build_candles_tf_projection.py  check_anchor_grid.py  compile_features_registry_contract.py  dev_import_safety.py  dev_inspect_critic.py  dev_inspect_features.py  dev_inspect_hypotheses.py  dev_inspect_macro_blackout.py  dev_inspect_memory_model.py  dev_inspect_windows.py  dev_seed_candles.py  dev_seed_macro_calendar.py  export-code-snapshot.ps1  import_dt_partitioned_candles.py  (+8 more)
(+474 files in other folders)
