[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-engine"
version = "0.0.0"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
  "**/*.bak*",
  "**/__pycache__/**",
  "**/.venv/**",
  "**/venv/**",
  "**/.git/**",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/dist/**",
  "**/build/**",
]

[tool.ruff.lint]
select = [
  "F",      # pyflakes
  "E",      # pycodestyle (errors)
  "W",      # pycodestyle (warnings)
  "I",      # isort (import order)
  "B",      # bugbear
  "UP",     # pyupgrade
  "TID",    # flake8-tidy-imports (banned-api)
]
ignore = [
  "E402",   # allow non-top imports in a few places if needed
]

[tool.ruff.lint.isort]
known-first-party = ["engine"]

[tool.ruff.lint.flake8-tidy-imports]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"engine.paradigms.register_all".msg = "Use engine.paradigms.api.register_all_paradigms() (explicit; no import-time side effects)."
"engine.core.schema".msg = "Prefer engine.core.api for stable contracts; engine.core.schema is internal unless implementing writers."
"engine.microbatch.steps".msg = "Scripts/tools should call run_microbatch() or use engine.microbatch.api; only inspectors should import steps."

[tool.ruff.lint.per-file-ignores]
"src/**" = ["TID251"]



